# PANW-NetSec-Hackathon-Case

./: .gitignore  ABSOLUTELY_FINAL.md  ARCHITECTURE_AND_ROADMAP.md  COMPANION_COMPLETE_FINAL.md  COMPANION_FINAL_REPORT.md  DEMO_GUIDE.md  DOCUMENTATION.md  FINAL_SECURITY_SHOWCASE.md  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTERVIEW_PREP.md  LICENSE  Makefile  PLAN_PANW_ENHANCED.md  README.md  README_FOR_INTERVIEW.md  RESEARCH_METHODOLOGY.md  SECURITY_FIXES_COMPLETE.md  SECURITY_FIXES_REQUIRED.md  SECURITY_FIX_SUMMARY.md  SECURITY_RESEARCH_INSIGHTS.md  SECURITY_RESEARCH_SUMMARY.md  SECURITY_SHOWCASE.md  SECURITY_TODO.md  START_HERE.md  pyproject.toml
ai_working/: IMPLEMENTATION_SUMMARY.md
ai_working/ddd/: COMPLETION_SUMMARY.md  code_plan.md  docs_index.txt  docs_status.md  plan.md  test_report.md
companion/: __init__.py  ai_engine.py  analyzer.py  cli.py  cli.py.logging_fix  config.py  journal.py  migrate_filenames.py  models.py  passphrase_prompt.py  prompter.py  session.py  storage.py  summarizer.py  trends.py
companion/ai_backend/: __init__.py  base.py  mock_provider.py  ollama_provider.py  openai_provider.py  qwen_provider.py
companion/monitoring/: __init__.py  dashboard.py  health.py  metrics.py
companion/security/: __init__.py  audit.py  encryption.py  passphrase.py  pii_detector.py  sandboxing.py
companion/security/data/: common_passwords.txt
companion/security_research/: __init__.py  adversarial_tester.py  data_poisoning_detector.py  pii_sanitizer.py  prompt_injection_detector.py
companion/utils/: __init__.py  circuit_breaker.py  error_classifier.py  retry.py
docs/: DESIGN.md  DEVELOPMENT.md  ENCRYPTED_AUDIT_LOGS.md  KEY_ROTATION.md  MEMORY_SECURITY.md  PASSPHRASE_SECURITY.md  PERFORMANCE.md  PRESENTATION.md  QUANTIZATION.md  QWEN_SETUP.md  RESEARCH_FINDINGS.md  SECURITY.md  SECURITY_ENHANCEMENTS.md  THREAT_MODEL.md  TROUBLESHOOTING.md  USER_GUIDE.md
reports/: security_test_report.md
tests/: test_adversarial.py  test_ai_backend.py  test_ai_engine.py  test_analyzer.py  test_audit_encryption.py  test_cli.py  test_config.py  test_data_poisoning.py  test_full_metadata_encryption.py  test_journal.py  test_journal_encryption.py  test_key_rotation.py  test_models.py  test_passphrase_security.py  test_passphrase_verification.py  test_pii_detector.py  test_pii_sanitization.py  test_prompt_injection.py  test_prompter.py  test_security_audit.py  test_security_encryption.py  test_storage.py  test_summarizer.py  test_utils.py
tests/data/: injection_test_cases.json  pii_test_cases.json  poisoning_test_cases.json
