[project]
name = "companion-journal"
version = "0.1.0"
description = "Privacy-preserving AI journaling companion with production-grade security infrastructure"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = [
    "journal",
    "mental-health",
    "ai",
    "wellness",
    "privacy",
    "security",
    "local-ai",
    "sentiment-analysis",
]
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core CLI and UI
    "click>=8.1.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    
    # Data validation
    "pydantic>=2.0.0",
    
    # AI/ML
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "optimum>=1.14.0",
    "sentence-transformers>=2.2.0",
    
    # Security
    "cryptography>=41.0.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    
    # Monitoring
    "psutil>=5.9.0",
    
    # Utilities
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]

monitoring = [
    "prometheus-client>=0.19.0",
]

[project.scripts]
companion = "companion.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/companion"
Documentation = "https://github.com/your-username/companion#readme"
Repository = "https://github.com/your-username/companion"
Issues = "https://github.com/your-username/companion/issues"
Changelog = "https://github.com/your-username/companion/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["companion"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "EM",  # flake8-errmsg
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "PL",  # pylint
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101"]  # Allow assert and magic values in tests

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"
exclude = [
    ".venv",
    "**/__pycache__",
    "**/.pytest_cache",
    "**/node_modules",
    ".git",
    "build",
    "dist",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=companion",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["companion"]
omit = [
    "tests/*",
    "**/__pycache__/*",
    "**/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
